# eventCam

./: CMakeLists.txt  README.md  bias_config.txt
include/: eventoViewer.hpp  menuGUI.hpp
src/: eventoViewer.cpp  main.cpp  menuGUI.cpp
